Fix Algolia search input box not vertical aligned

--- a/packages/vuepress-theme-book/styles/index.styl
+++ b/packages/vuepress-theme-book/styles/index.styl
@@ -45,6 +45,9 @@ body .navbar .site-name, h1, h2
           background-size: 0.9rem
           background-position-y: 50%
 
+    #search-form
+      line-height inherit
+
 // SIDEBAR
 
 .sidebar
